--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Browser based game",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist",
+    "build": "webpack --mode production",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -26,10 +26,13 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "jest": "^24.0.0"
+    "jest": "^24.0.0",
+    "webpack": "^4.29.2",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5"
